--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p class="footer__copyright">&copy;2020 Mesto Russia</p>
             </footer>
         </main>
-        <div class="popup popup__off">
+        <div class="popup">
             <div class="popup__container">
                 <div class="popup__content">
                     <img class="popup__close" src="./images/Close-Icon.png" alt="Крестик"/>
