--- a/index.html
+++ b/index.html
@@ -17,55 +17,55 @@
                 <div class="profile__title">
                     <div class="profile__button">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <a class="profile__edit" href="#"></a>
+                        <button class="profile__button_edit" type="button"></button>
                     </div>
                     <p class="profile__about">Исследователь океана</p>
                 </div>
-                <a class="profile__add" href="#">
+                <button class="profile__button_add" type="button">
                     <img src="./images/pluse.png.png" alt="Добавить" class="profile__image" />
-                </a>
+                </button>
             </section>
             <section class="elements">
                 <div class="elements__card">
                     <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="elements__image" />
                     <div class="elements__title">
                         <h2 class="elements__name">Карачаевск</h2>
-                        <img src="./images/like.svg.svg" alt="Лайк" class="elements__like" />
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="elements__image" />
                     <div class="elements__title">
                         <h2 class="elements__name">Гора Эльбрус</h2>
-                        <img src="./images/like.svg.svg" alt="Лайк" class="elements__like" />
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="elements__image" />
                     <div class="elements__title">
                         <h2 class="elements__name">Домбай</h2>
-                        <img src="./images/like.svg.svg" alt="Лайк" class="elements__like" />
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="elements__image" />
                     <div class="elements__title">
                         <h2 class="elements__name">Гора Эльбрус</h2>
-                        <img src="./images/like.svg.svg" alt="Лайк" class="elements__like" />
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="elements__image" />
                     <div class="elements__title">
                         <h2 class="elements__name">Домбай</h2>
-                        <img src="./images/like.svg.svg" alt="Лайк" class="elements__like" />
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="elements__image" />
                     <div class="elements__title">
                         <h2 class="elements__name">Карачаево-Черкесия</h2>
-                        <img src="./images/like.svg.svg" alt="Лайк" class="elements__like" />
+                        <button type="button" class="elements__like"></button>
                     </div>
                 </div>
             </section>
@@ -87,3 +87,4 @@
         <script src="./scripts/script.js"></script>
     </body>
 </html>
+
