--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <div class="profile__title">
                     <div class="profile__button">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button class="profile__button_edit" type="button"></button>
+                        <button class="profile__edit" type="button"></button>
                     </div>
                     <p class="profile__about">Исследователь океана</p>
                 </div>
-                <button class="profile__button_add" type="button">
+                <button class="profile__add" type="button">
                     <img src="./images/pluse.png.png" alt="Добавить" class="profile__image" />
                 </button>
             </section>
