--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="popup" id="popup-image">
             <div class="popup__container">
-            <img class="popup__image" alt="" src="">
+            <img class="popup__image">
             <h3 class="popup__subtitle"></h3>
             <button class="popup__close" id="popup-close-image" type="button"></button>
             </div>
@@ -63,7 +63,7 @@
         <template id="template-card">
             <div class="elements__card">
                 <button class="elements__delete" type="button"></button>
-                <img class="elements__image" src="" alt="">
+                <img class="elements__image">
                 <div class="elements__title">
                     <h2 class="elements__name"></h2>
                     <button type="button" class="elements__like"></button>
