--- a/index.html
+++ b/index.html
@@ -31,29 +31,29 @@
         <footer class="footer">
             <p class="footer__copyright">&copy;2020 Mesto Russia</p>
         </footer>
-        <div class="popup">
+        <div class="popup popup_profile">
             <div class="popup__content">
-                <button class="popup__close" type="button"></button>
+                <button class="popup__close popup_close_profile" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form" name="form" method="post">
+                <form class="popup__form popup_form_edit" name="form" method="post">
                     <input type="text" id="name" placeholder="Имя" name="name" class="popup__name" />
                     <input type="text" id="about" placeholder="О себе" name="about" class="popup__name" />
                     <button class="popup__button" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
-        <div class="popup" id="popup__add">
+        <div class="popup popup_add">
             <div class="popup__content">
                 <button class="popup__close" id="close__add" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form class="popup__form" name="form" method="post" id="form-add-card">
+                <form class="popup__form popup_form_add" name="form" method="post" id="form-add-card">
                     <input type="text" placeholder="Название" name="name" class="popup__name" id="card-name" />
                     <input type="text" placeholder="Ссылка на картинку" name="about" class="popup__name" id="card-link" />
                     <button class="popup__button" id="btn" type="submit">Создать</button>
                 </form>
             </div>
         </div>
-        <div class="popup" id="popup-image">
+        <div class="popup popup_image">
             <div class="popup__container">
             <img class="popup__image">
             <h3 class="popup__subtitle"></h3>
