--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </footer>
         <div class="popup popup__type_profile">
             <div class="popup__content">
-                <button class="popup__close popup_close_profile" type="button"></button>
+                <button class="popup__close popup__close_profile" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form popup__form_type_edit" name="form" method="post">
                     <input type="text" id="name" placeholder="Имя" name="name" class="popup__name" />
