--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <footer class="footer">
             <p class="footer__copyright">&copy;2020 Mesto Russia</p>
         </footer>
-        <div class="popup popup__type_profile">
+        <div class="popup popup_type_profile">
             <div class="popup__content">
                 <button class="popup__close popup__close_profile" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
@@ -42,7 +42,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__type_add">
+        <div class="popup popup_type_add">
             <div class="popup__content">
                 <button class="popup__close" id="close__add" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
@@ -53,7 +53,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__type_image">
+        <div class="popup popup_type_image">
             <div class="popup__container">
             <img class="popup__image">
             <h3 class="popup__subtitle"></h3>
