--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             <div class="popup__content">
                 <button class="popup__close popup__close_profile" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form popup__form_type_edit" name="form" method="post">
-                    <input type="text" id="name" placeholder="Имя" name="name" class="popup__name" />
-                    <input type="text" id="about" placeholder="О себе" name="about" class="popup__name" />
+                <form class="popup__form popup__form_type_edit" name="form" method="post" novalidate>
+                    <input type="text" id="name" placeholder="Имя" name="name" class="popup__name" required maxlength="40" minlength="2"/>
+                    <span class="popup__form_input_error name-error"></span>
+                    <input type="text" id="about" placeholder="О себе" name="about" class="popup__name" required minlength="2" maxlength="200"/>
+                    <span class="popup__form_input_error about-error"></span>
                     <button class="popup__button" type="submit">Сохранить</button>
                 </form>
             </div>
@@ -46,9 +48,11 @@
             <div class="popup__content">
                 <button class="popup__close" id="close__add" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form class="popup__form popup__form_type_add" name="form" method="post" id="form-add-card">
-                    <input type="text" placeholder="Название" name="name" class="popup__name" id="card-name" />
-                    <input type="text" placeholder="Ссылка на картинку" name="about" class="popup__name" id="card-link" />
+                <form class="popup__form popup__form_type_add" name="form" method="post" id="form-add-card" novalidate>
+                    <input type="text" placeholder="Название" name="name" class="popup__name" id="card-name" required minlength="2" maxlength="30"/>
+                    <span class="popup__form_input_error card-name-error"></span>
+                    <input type="url" placeholder="Ссылка на картинку" name="about" class="popup__name" id="card-link" required/>
+                    <span class="popup__form_input_error card-link-error"></span>
                     <button class="popup__button" id="btn" type="submit">Создать</button>
                 </form>
             </div>
@@ -70,7 +74,8 @@
                 </div>
             </div>
         </template>
-        <script src="./scripts/script.js"></script>
+        <script src="./scripts/index.js"></script>
+        <script src="./scripts/validate.js"></script>
     </body>
 </html>
 
