--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form popup__form_type_edit" name="form" method="post" novalidate>
                     <input type="text" id="name" placeholder="Имя" name="name" class="popup__name" required maxlength="40" minlength="2"/>
-                    <span class="popup__form_input_error name-error"></span>
+                    <span class="popup__error name-error"></span>
                     <input type="text" id="about" placeholder="О себе" name="about" class="popup__name" required minlength="2" maxlength="200"/>
-                    <span class="popup__form_input_error about-error"></span>
+                    <span class="popup__error about-error"></span>
                     <button class="popup__button" type="submit">Сохранить</button>
                 </form>
             </div>
@@ -50,9 +50,9 @@
                 <h2 class="popup__title">Новое место</h2>
                 <form class="popup__form popup__form_type_add" name="form" method="post" id="form-add-card" novalidate>
                     <input type="text" placeholder="Название" name="name" class="popup__name" id="card-name" required minlength="2" maxlength="30"/>
-                    <span class="popup__form_input_error card-name-error"></span>
+                    <span class="popup__error card-name-error"></span>
                     <input type="url" placeholder="Ссылка на картинку" name="about" class="popup__name" id="card-link" required/>
-                    <span class="popup__form_input_error card-link-error"></span>
+                    <span class="popup__error card-link-error"></span>
                     <button class="popup__button" id="btn" type="submit">Создать</button>
                 </form>
             </div>
