--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 </div>
             </div>
         </template>
+        <script src="./scripts/initialCards.js"></script>
         <script src="./scripts/index.js"></script>
         <script src="./scripts/validate.js"></script>
     </body>
