--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <span class="popup__error card-name-error"></span>
                     <input type="url" placeholder="Ссылка на картинку" name="about" class="popup__name" id="card-link" required/>
                     <span class="popup__error card-link-error"></span>
-                    <button class="popup__button" id="btn" type="submit">Создать</button>
+                    <button class="popup__button popup__button_add" id="btn" type="submit">Создать</button>
                 </form>
             </div>
         </div>
