--- a/index.html
+++ b/index.html
@@ -1,83 +1,143 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mesto</title>
-        <link rel="stylesheet" href="./pages/index.css" />
-    </head>
-    <body class="root">
-        <header class="header">
-            <a class="header__link" href="#"><img class="header__logo" src="./images/Vector.svg" alt="Логотип" /></a>
-        </header>
-        <main class="content">
-            <section class="profile">
-                <img class="profile__avatar" src="./images/image.jpg" alt="Аватар" />
-                <div class="profile__title">
-                    <div class="profile__button">
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button class="profile__edit" type="button"></button>
-                    </div>
-                    <p class="profile__about">Исследователь океана</p>
-                </div>
-                <button class="profile__add" type="button">
-                    <img src="./images/pluse.png.png" alt="Добавить" class="profile__image" />
-                </button>
-            </section>
-            <section class="elements">
-            </section>
-        </main>
-        <footer class="footer">
-            <p class="footer__copyright">&copy;2020 Mesto Russia</p>
-        </footer>
-        <div class="popup popup_type_profile">
-            <div class="popup__content">
-                <button class="popup__close popup__close_profile" type="button"></button>
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form popup__form_type_edit" name="form" method="post" novalidate>
-                    <input type="text" id="name" placeholder="Имя" name="name" class="popup__name" required maxlength="40" minlength="2"/>
-                    <span class="popup__error name-error"></span>
-                    <input type="text" id="about" placeholder="О себе" name="about" class="popup__name" required minlength="2" maxlength="200"/>
-                    <span class="popup__error about-error"></span>
-                    <button class="popup__button" type="submit">Сохранить</button>
-                </form>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mesto</title>
+    <link rel="stylesheet" href="./pages/index.css" />
+  </head>
+  <body class="root">
+    <header class="header">
+      <a class="header__link" href="#"
+        ><img class="header__logo" src="./images/Vector.svg" alt="Логотип"
+      /></a>
+    </header>
+    <main class="content">
+      <section class="profile">
+        <img class="profile__avatar" src="./images/image.jpg" alt="Аватар" />
+        <div class="profile__title">
+          <div class="profile__button">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button class="profile__edit" type="button"></button>
+          </div>
+          <p class="profile__about">Исследователь океана</p>
         </div>
-        <div class="popup popup_type_add">
-            <div class="popup__content">
-                <button class="popup__close" id="close__add" type="button"></button>
-                <h2 class="popup__title">Новое место</h2>
-                <form class="popup__form popup__form_type_add" name="form" method="post" id="form-add-card" novalidate>
-                    <input type="text" placeholder="Название" name="name" class="popup__name" id="card-name" required minlength="2" maxlength="30"/>
-                    <span class="popup__error card-name-error"></span>
-                    <input type="url" placeholder="Ссылка на картинку" name="about" class="popup__name" id="card-link" required/>
-                    <span class="popup__error card-link-error"></span>
-                    <button class="popup__button popup__button_add" id="btn" type="submit">Создать</button>
-                </form>
-            </div>
-        </div>
-        <div class="popup popup_type_image">
-            <div class="popup__container">
-            <img class="popup__image">
-            <h3 class="popup__subtitle"></h3>
-            <button class="popup__close" id="popup-close-image" type="button"></button>
-            </div>
-        </div>
-        <template id="template-card">
-            <div class="elements__card">
-                <button class="elements__delete" type="button"></button>
-                <img class="elements__image">
-                <div class="elements__title">
-                    <h2 class="elements__name"></h2>
-                    <button type="button" class="elements__like"></button>
-                </div>
-            </div>
-        </template>
-        <script src="./scripts/constans.js"></script>
-        <script src="./scripts/initialCards.js"></script>
-        <script src="./scripts/index.js"></script>
-        <script src="./scripts/validate.js"></script>
-    </body>
-</html>
+        <button class="profile__add" type="button">
+          <img
+            src="./images/pluse.png.png"
+            alt="Добавить"
+            class="profile__image"
+          />
+        </button>
+      </section>
+      <section class="elements"></section>
+    </main>
+    <footer class="footer">
+      <p class="footer__copyright">&copy;2020 Mesto Russia</p>
+    </footer>
+    <div class="popup popup_type_profile">
+      <div class="popup__content">
+        <button
+          class="popup__close popup__close_profile"
+          type="button"
+        ></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form
+          class="popup__form popup__form_type_edit"
+          name="form"
+          method="post"
+          novalidate
+        >
+          <input
+            type="text"
+            id="name"
+            placeholder="Имя"
+            name="name"
+            class="popup__name"
+            required
+            maxlength="40"
+            minlength="2"
+          />
+          <span class="popup__error name-error"></span>
+          <input
+            type="text"
+            id="about"
+            placeholder="О себе"
+            name="about"
+            class="popup__name"
+            required
+            minlength="2"
+            maxlength="200"
+          />
+          <span class="popup__error about-error"></span>
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_add">
+      <div class="popup__content">
+        <button class="popup__close" id="close__add" type="button"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form
+          class="popup__form popup__form_type_add"
+          name="form"
+          method="post"
+          id="form-add-card"
+          novalidate
+        >
+          <input
+            type="text"
+            placeholder="Название"
+            name="name"
+            class="popup__name"
+            id="card-name"
+            required
+            minlength="2"
+            maxlength="30"
+          />
 
+          <span class="popup__error card-name-error"></span>
+          <input
+            type="url"
+            placeholder="Ссылка на картинку"
+            name="about"
+            class="popup__name"
+            id="card-link"
+            required
+          />
+          <span class="popup__error card-link-error"></span>
+          <button
+            class="popup__button popup__button_add"
+            id="btn"
+            type="submit"
+          >
+            Создать
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_image">
+      <div class="popup__container">
+        <img class="popup__image" />
+        <h3 class="popup__subtitle"></h3>
+        <button
+          class="popup__close"
+          id="popup-close-image"
+          type="button"
+        ></button>
+      </div>
+    </div>
+    <template id="template-card">
+      <div class="elements__card">
+        <button class="elements__delete" type="button"></button>
+        <img class="elements__image" />
+        <div class="elements__title">
+          <h2 class="elements__name"></h2>
+          <button type="button" class="elements__like"></button>
+        </div>
+      </div>
+    </template>
+    <script type="module" src="scripts/index.js"></script>
+  </body>
+</html>
