Проектная работа исправил №8

--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="root">
     <header class="header">
       <a class="header__link" href="#"
-        ><img class="header__logo" src="./images/Vector.svg" alt="Логотип"
+        ><img
+          class="header__logo"
+          src="<%=require('../images/Vector.svg')%>"
+          alt="Логотип"
       /></a>
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/image.jpg" alt="Аватар" />
+        <img class="profile__avatar" src="<%=require('../images/image.jpg')%>" alt="Аватар" />
         <div class="profile__title">
           <div class="profile__button">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -25,7 +27,7 @@
         </div>
         <button class="profile__add" type="button">
           <img
-            src="./images/pluse.png.png"
+            src="<%=require('../images/pluse.png.png')%>"
             alt="Добавить"
             class="profile__image"
           />
