--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,17 @@
       <a class="header__link" href="#"
         ><img
           class="header__logo"
-          src="<%=require('../images/Vector.svg')%>"
+          src="<%=require('./images/Vector.svg')%>"
           alt="Логотип"
       /></a>
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('../images/image.jpg')%>" alt="Аватар" />
+        <img
+          class="profile__avatar"
+          src="<%=require('./images/image.jpg')%>"
+          alt="Аватар"
+        />
         <div class="profile__title">
           <div class="profile__button">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -27,7 +31,7 @@
         </div>
         <button class="profile__add" type="button">
           <img
-            src="<%=require('../images/pluse.png.png')%>"
+            src="<%=require('./images/pluse.png.png')%>"
             alt="Добавить"
             class="profile__image"
           />
@@ -103,7 +107,7 @@
           <input
             type="url"
             placeholder="Ссылка на картинку"
-            name="about"
+            name="link"
             class="popup__name"
             id="card-link"
             required
@@ -140,6 +144,5 @@
         </div>
       </div>
     </template>
-    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
