--- a/src/index.html
+++ b/src/index.html
@@ -139,8 +139,10 @@
     <div class="popup popup_type_del">
       <div class="popup__content">
         <p class="popup__title">Вы уверены?</p>
-        <button class="popup__button" type="button">Да</button>
-        <button class="popup__close"></button>
+        <button class="popup__close popup__close_del" type="button"></button>
+        <form class="popup__form popup__form_type_del" name="form" novalidate>
+          <button class="popup__button" type="submit">Да</button>
+        </form>
       </div>
     </div>
     <div class="popup popup_type_avatar">
