--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </header>
     <main class="content">
       <section class="profile">
-        <button class="profile__button_avatar">
+        <button class="profile__pencil">
           <img
             class="profile__avatar"
             src="<%=require('./images/image.jpg')%>"
