--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
 
     <template id="template-card">
       <div class="elements__card">
-        <button class="elements__delete" type="button"></button>
+        <button class="elements__delete elements__delete_invisible" type="button"></button>
         <img class="elements__image" />
         <div class="elements__title">
           <h2 class="elements__name"></h2>
